--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 flume = "0.11"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid"] }
+ractor = "0.15.8"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 
 [dev-dependencies]
-tempfile = "3.8"
