--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,18 @@ authors = ["Yannik Schroeder <yannik.schroeder@tu-berlin.de>"]
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
+tonic = "0.14.2"
+tonic-prost = "0.14.2"
+prost = "0.14.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 flume = "0.11"
-ractor = "0.15.8"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
+differential-dataflow = "0.18.0"
+timely = "0.25.0"
 
-[dev-dependencies]
+[build-dependencies]
+tonic-prost-build = "0.14.2"
