--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,31 @@
 [package]
 name = "coordinator"
 version = "0.1.0"
-edition = "2024"
-description = "Stateful Coordinator for NebulaStream"
+edition = "2021"
 authors = ["Yannik Schroeder <yannik.schroeder@tu-berlin.de>"]
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-tonic = "0.14.2"
-tonic-prost = "0.14.2"
-prost = "0.14.1"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-flume = "0.11"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
+tonic = { version = "0.5", package = "madsim-tonic" }
+prost = { version = "0.13.5" }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+flume = "0.11.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "2.0"
-differential-dataflow = "0.18.0"
-timely = "0.25.0"
+thiserror = "2.0.17"
+sqlx = { version = "0.9.0-alpha.1", features = ["sqlite", "runtime-tokio"] }
+strum = { version = "0.25", features = ["derive"] }
+
+[dev-dependencies]
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
+
+[dependencies.uuid]
+version = "1.18.1"
+features = [
+    "v4",
+]
 
 [build-dependencies]
-tonic-prost-build = "0.14.2"
+tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }
