Add changelogs, refactor catalog tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tokio = { version = "0.2", package = "madsim-tokio", features = [
 ] }
 tokio-util = "0.7.17"
 
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "macros", "json"] }
+sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "macros", "json", "chrono"] }
 
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -27,9 +27,10 @@ flume = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
-strum = { version = "0.26.3", features = ["derive"] }
+strum = { version = "0.27.2", features = ["derive"] }
 tower = { version = "0.5", features = ["retry"] }
 futures-util = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
 
 # tokio-retry2 might conflict if not patched, let's try keeping it.
 # RisingWave patches `tokio-retry`, not `tokio-retry2`.
