--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ tokio = { version = "0.2", package = "madsim-tokio", features = [
     "macros",
     "time",
 ] }
-tokio-util = "0.7.17"
 
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "macros", "json", "chrono"] }
 
@@ -26,30 +25,27 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 flume = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
+http = "1.4.0"
+toml = "0.9.8"
+tokio-retry = "0.3.0"
 thiserror = "2.0.17"
 strum = { version = "0.27.2", features = ["derive"] }
-tower = { version = "0.5", features = ["retry"] }
 futures-util = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 
-# tokio-retry2 might conflict if not patched, let's try keeping it.
-# RisingWave patches `tokio-retry`, not `tokio-retry2`.
-tokio-retry2 = { version = "0.7.0", features = ["jitter", "tracing"] }
+anyhow = "1.0.100"
 
 [dev-dependencies]
-quickcheck = "1.0.3"
-quickcheck_macros = "1.1.0"
+proptest = "1.9.0"
+proptest-derive = "0.5.1"
 
 [dependencies.uuid]
 version = "1.10"
 features = ["v4"]
 
 [patch.crates-io]
-# RisingWave's fork of SQLx (v0.8.2)
-# This fork replaces socket IO with madsim network handles.
 sqlx = { git = "https://github.com/madsim-rs/sqlx.git", rev = "3efe6d0065963db2a2b7f30dee69f647e28dec81" }
-
-# Required for UUID v4 generation to be deterministic (seeded by madsim).
+tokio-retry = { git = "https://github.com/madsim-rs/rust-tokio-retry.git", rev = "95e2fd3" }
 getrandom = { git = "https://github.com/madsim-rs/getrandom.git", rev = "e79a7ae" }
 
 [build-dependencies]
